--- a/wp-content/themes/xevent/style.css
+++ b/wp-content/themes/xevent/style.css
@@ -27,6 +27,7 @@ body{
     width: 50px;
     height: 50px;
     box-sizing: border-box;
+    cursor: pointer;
 }
 
 .sidebar{
@@ -73,6 +74,7 @@ body{
 
 #menu-header-menu{
     list-style: none;
+    cursor: pointer;
 }
 
 #menu-header-menu li{
@@ -94,18 +96,119 @@ body{
     margin: 3px 10px 0 0;
 }
 
-.signin{
+.access-btn{
     border-radius: 8px;
     padding: 5px 10px;
     box-sizing: border-box;
-    background: #D4E1E7;
     color: white;
+    cursor: pointer;
+}
+
+.signin{
+    background: #D4E1E7;
 }
 
 .login{
-    border-radius: 8px;
-    padding: 5px 10px;
-    box-sizing: border-box;
     background: #E9D7D7;
-    color: white;
+}
+
+
+
+.jssora02l, .jssora02r {
+    display: block;
+    position: absolute;
+    width: 55px;
+    height: 55px;
+    cursor: pointer;
+    background: url('img/a02.png') no-repeat;
+    overflow: hidden;
+}
+.jssora02l { background-position: -3px -33px; }
+.jssora02r { background-position: -63px -33px; }
+.jssora02l:hover { background-position: -123px -33px; }
+.jssora02r:hover { background-position: -183px -33px; }
+.jssora02l.jssora02ldn { background-position: -3px -33px; }
+.jssora02r.jssora02rdn { background-position: -63px -33px; }
+.jssora02l.jssora02lds { background-position: -3px -33px; opacity: .3; pointer-events: none; }
+.jssora02r.jssora02rds { background-position: -63px -33px; opacity: .3; pointer-events: none; }
+.jssort11 .p {    
+    position: absolute;    
+    top: 0;    
+    left: 0;    
+    width: 200px;    
+    height: 69px;    
+    background: #181818;
+}
+
+.jssort11 .tp {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+.jssort11 .i, .jssort11 .pav:hover .i {
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    width: 60px;
+    height: 30px;
+    border: white 1px dashed;
+}
+* html .jssort11 .i {
+    width /**/: 62px;
+    height /**/: 32px;
+}
+.jssort11 .pav .i {
+    border: white 1px solid;
+}
+.jssort11 .t, .jssort11 .pav:hover .t {
+    position: absolute;
+    top: 3px;
+    left: 68px;
+    width: 129px;
+    height: 32px;
+    line-height: 32px;
+    text-align: center;
+    color: #fc9835;
+    font-size: 13px;
+    font-weight: 700;
+}
+.jssort11 .pav .t, .jssort11 .p:hover .t {
+    color: #fff;
+}
+.jssort11 .c, .jssort11 .pav:hover .c {
+    position: absolute;
+    top: 38px;
+    left: 3px;
+    width: 194px;
+    height: 32px;
+    line-height: 32px;
+    color: #fff;
+    font-size: 11px;
+    font-weight: 400;
+    overflow: hidden;
+}
+.jssort11 .pav .c, .jssort11 .p:hover .c {
+    color: #fc9835;
+}
+.jssort11 .t, .jssort11 .c {
+    transition: color 2s;
+    -moz-transition: color 2s;
+    -webkit-transition: color 2s;
+    -o-transition: color 2s;
+}
+.jssort11 .p:hover .t, .jssort11 .pav:hover .t, .jssort11 .p:hover .c, .jssort11 .pav:hover .c {
+    transition: none;
+    -moz-transition: none;
+    -webkit-transition: none;
+    -o-transition: none;
+}
+.jssort11 .p:hover, .jssort11 .pav:hover {
+    background: #333;
+}
+.jssort11 .pav, .jssort11 .p.pdn {
+    background: #462300;
 }
